# html_preview_tool

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  preview.py
backend/tests/: test_health.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: HtmlPreviewer.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: HtmlPreviewer.tsx
nginx/: nginx.conf
