[project]
name = "html-preview-tool"
version = "0.1.0"
description = "Full-stack HTML preview tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.25",
    "uvicorn[standard]>=0.27.1",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
